feat(aggregator): implement handler to parse uploaded files
