# docs/swagger.json
@@ -7,6 +7,48 @@
     },
     "basePath": "/api/v1",
     "paths": {
+        "/aggregator/parse": {
+            "post": {
+                "security": [
+                    {
+                        "UsersAuth": []
+                    }
+                ],
+                "description": "File Parsing process",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "parser"
+                ],
+                "summary": "Parse File",
+                "parameters": [
+                    {
+                        "description": "query params",
+                        "name": "request",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/domain.ParseFileInput"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK"
+                    },
+                    "422": {
+                        "description": "Unprocessable Entity"
+                    },
+                    "500": {
+                        "description": "Internal Server Error"
+                    }
+                }
+            }
+        },
         "/auth/refresh": {
             "post": {
                 "description": "user refresh tokens process",
@@ -447,6 +489,15 @@
                 "col": {
                     "type": "string"
                 },
+                "is_map": {
+                    "type": "boolean"
+                },
+                "is_multiple": {
+                    "type": "boolean"
+                },
+                "map_start": {
+                    "type": "boolean"
+                },
                 "name": {
                     "type": "string"
                 }
@@ -479,6 +530,21 @@
                     "type": "string"
                 },
                 "version": {
+                    "type": "string"
+                }
+            }
+        },
+        "domain.ParseFileInput": {
+            "type": "object",
+            "required": [
+                "file_name",
+                "schema_id"
+            ],
+            "properties": {
+                "file_name": {
+                    "type": "string"
+                },
+                "schema_id": {
                     "type": "string"
                 }
             }
@@ -618,6 +684,9 @@
             "type": "object",
             "properties": {
                 "file_key": {
+                    "type": "string"
+                },
+                "file_name": {
                     "type": "string"
                 },
                 "file_url": {
