# internal/transport/handlers/routes.go
@@ -13,7 +13,9 @@ func (s *Server) routes() {
 
 	noAuth := apiRouter.PathPrefix("").Subrouter()
 	{
+		// health
 		noAuth.Handle("/health", http.HandlerFunc(healthCheck)).Methods(http.MethodGet)
+		// user
 		noAuth.Handle("/users/login", validatorWrapper[domain.SignInUserInput](s.loginUser)).Methods(http.MethodPost)
 		noAuth.Handle("/users", validatorWrapper[domain.SignUpUserInput](s.createUser)).Methods(http.MethodPost)
 		noAuth.Handle("/auth/refresh", validatorWrapper[domain.TokenInput](s.refreshToken)).Methods(http.MethodPost)
@@ -22,13 +24,18 @@ func (s *Server) routes() {
 	authApiRoutes := apiRouter.PathPrefix("").Subrouter()
 	authApiRoutes.Use(s.authenticate)
 	{
+		// user
 		authApiRoutes.Handle("/user", http.HandlerFunc(s.getCurrentUser)).Methods(http.MethodGet)
+		// schema
 		authApiRoutes.Handle("/schemas", validatorWrapper[domain.NewSchemaInput](s.createSchema)).Methods(http.MethodPost)
 		authApiRoutes.Handle("/schemas", http.HandlerFunc(s.listSchemas)).Methods(http.MethodGet)
 		authApiRoutes.Handle("/schemas/{id}", http.HandlerFunc(s.getSchemaById)).Methods(http.MethodGet)
 		authApiRoutes.Handle("/schemas/{id}", validatorWrapper[domain.UpdateSchemaInput](s.updateSchema)).Methods(http.MethodPatch)
 		authApiRoutes.Handle("/schemas/{id}", http.HandlerFunc(s.deleteSchema)).Methods(http.MethodDelete)
+		// storage
 		authApiRoutes.Handle("/storage/upload", s.blobUpload()).Methods(http.MethodPost)
+		// aggregator
+		authApiRoutes.Handle("/aggregator/parse", validatorWrapper[domain.ParseFileInput](s.parseFile)).Methods(http.MethodPost)
 	}
 }
 
